--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -11,7 +11,15 @@
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
-
+<style>
+    .site-slogan {
+      text-align: center;
+      font-style: italic;
+      padding: 10px 0;
+      background-color: #f5f5f5;
+      margin-bottom: 10px;
+    }
+  </style>
 
 <!-- Support for MatJax -->
 <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
